# VSCode-Docker-CMake-dev-env-for-firmware-engineers

./: CMakeLists.txt  README.md  toolchain.cmake
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  setup.sh
Core/Src/: main.c
scripts/: run.py
